BE BS-20 issue paging endpoint (#21)