@@ -1,7 +1,6 @@
 package com.bts.bugstalker.util.generic;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Converter interface for mappings between objects,
@@ -10,13 +9,13 @@ import java.util.stream.Collectors;
  * @param <S> source class to convert from
  * @param <T> target class to convert to
  */
-public interface TwoWayConverter<S,T> extends Converter<S,T> {
+public interface TwoWayConverter<S, T> extends Converter<S, T> {
 
     S reverseConvert(T target);
 
     default List<S> reverseConvert(List<T> sourceList) {
         return sourceList.stream()
                 .map(this::reverseConvert)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
